<resources>
    <string name="app_name">EAI钱包</string>
    <string name="balance">Balance</string>
    <string name="title_send">发送</string>
    <string name="title_request">地址</string>
    <string name="title_import">导入钱包</string>
    <string name="title_create">Create</string>
    <string name="title_account">钱包</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_account">New Wallet</string>
    <string name="prompt_email">Wallet name</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Create</string>
    <string name="action_sign_in_short">Create</string>
    <string name="prompt_to">To</string>
    <string name="action_send">发送交易</string>
    <string name="error_invalid_email">不合法邮件地址</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_account_list">AccountListActivity</string>
    <string name="action_settings">设置</string>
    <string name="action_select_account">钱包</string>
    <string name="title_account_list">钱包</string>
    <string name="title_account_detail">Wallet Detail</string>
    <string name="account_delete">delete</string>
    <string name="cancel">取消</string>
    <string name="confirm_delete_account">请确认有此钱包的备份</string>
    <string name="title_activity_import_account">ImportAccountActivity</string>
    <string name="action_import">导入</string>
    <string name="title_activity_export_account">ExportAccountActivity</string>
    <string name="action_export">备份私钥</string>
    <string name="message_save_this">请保存到安全的地方</string>
    <string name="copy">拷贝到剪切板</string>
    <string name="close">关闭</string>
    <string name="keystore_keyword">KEYSTORE</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="menu_refresh">刷新</string>
    <string name="sent">发送</string>
    <string name="received">接收</string>
    <string name="title_activity_settings">设置</string>
    <string name="network_label">网络</string>
    <string name="app_intro">Intro</string>
    <string name="title_trust">EAI Wallet</string>
    <string name="low_storage_error">low storage error</string>
    <string name="no_camera_permission">没有相机权限</string>
    <string name="ok">确定</string>
    <string name="no_barcode_captured">无法找到二维码</string>
    <string name="scan_barcode_button">扫描</string>
    <string name="barcode_error_format">二维码格式错误: %s</string>
    <string name="action_request">My Address</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">提醒</string>
    <string name="title_delete_account">你确定要删除钱包吗?</string>
    <string name="no_transactions">无交易。\n请刷新。</string>
    <string name="telegram">Telegram社区</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_community">社区</string>
    <string name="title_opensource">Open source development</string>
    <string name="title_source_code">Source code</string>
    <string name="title_report_bug">Report a bug</string>
    <string name="title_rate">在商店中评分</string>
    <string name="title_support">支持</string>
    <string name="account_already_imported">Wallet with this address already exists</string>
    <string name="message_delete_account">Permanently deleting wallet. Make sure that it has been exported and stored elsewhere.</string>
    <string name="error_import">导入keystore失败</string>
    <string name="message_this_is_your_address">My public Ethereum wallet address</string>
    <string name="min_pwd_length">Password must be at least %d chars long</string>
    <string name="backup_warning_text">
        只有你能够控制你的钱包，你需要保存keystore的副本以防止本应用被删除。 \n\n
        你的钱包永远不会存储在云上或者存储于正常的设备备份中。
    </string>
    <string name="message_no_backup">备份十分重要</string>
    <string name="error_deleting_account">删除钱包失败</string>
	<string name="error_deleting_account_with_details">删除钱包失败%s</string>
    <string name="error_passwords_must_match">密码必须一致</string>
    <string name="label_confirm_new_password">确认新密码</string>
    <string name="label_new_password">新密码</string>
    <string name="activity_title_backup">备份: %s…</string>
    <string name="action_backup">备份</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms and Conditions</string>
    <string name="title_version">版本</string>
    <string name="title_activity_token_list">Tokens</string>
    <string name="title_tokens">我的Tokens</string>
    <string name="prompt_private_key">私钥</string>
    <string name="error_import_private_key">导入私钥错误</string>
    <string name="message_importing_private_key">正在导入私钥</string>
    <string name="lock_title">锁屏</string>
    <string name="lock_body">Secure lock screen hasn\'t set up. It is not safe.</string>
    <string name="lock_settings">Lock settings</string>
    <string name="lock_exit">Exit</string>
    <string name="unlock_screen_title_android">Unlock screen</string>
    <string name="unlock_screen_prompt_android">Please unlock your Android device to continue.</string>
    <string name="sending_progress">发送中</string>
    <string name="backup_new_password_text">Think of a password that will be installed on the backup.\nThe password will be available for this wallet.</string>
    <string name="do_manage_make_backup">Did you manage to make a backup?</string>
    <string name="yes_continue">Yes, continue</string>
    <string name="no_repeat">No, repeat</string>
    <string name="unable_unblock_device">Unable to unlock the device.</string>
    <string name="skip">Skip</string>
    <string name="root_title">设备安全受到威胁</string>
    <string name="root_body">任何root的应用可以访问秘钥然后窃取钱包！立即删除应用并在一个安全的设备上运行。</string>
    <string name="gas_fee_title">Gas Fee (Gwei)</string>
    <string name="transfer">Transfer %s</string>
    <string name="action_buy">购买</string>
    <string name="title_deposit">你希望如何购买?</string>
	<string name="empty"/>
	<string name="try_again">重试</string>
	<string name="already_have_account">已有钱包?</string>
	<string name="title_add_account">Add wallet</string>
	<string name="action_create_new_account">新建钱包</string>
	<string name="unknown_error">An error has occurred.</string>
	<string name="action_backup_wallet">备份钱包</string>
	<string name="action_backup_later">Do it later</string>
	<string name="set_account_default">Do want to make a new wallet the main one?</string>
    <string name="no_tokens">暂无Tokens</string>
    <string name="title_email">给我们发邮件</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_my_address">我的地址</string>
    <string name="title_my_tokens">我的Tokens</string>
    <string name="title_activity_send">Send</string>
    <string name="title_activity_confirmation">确认</string>
    <string name="title_transaction_details">交易详情</string>
    <string name="title_add_token">添加Token</string>
    <string name="suggestion_field_required">* 必填</string>
    <string name="suggestion_import_keystore">Importing wallet as easy as creating</string>
    <string name="suggestion_private_key">私钥长度为64</string>
    <string name="suggestion_empty_password_available">密码可以置空</string>
    <string name="suggestion_this_is_your_address">我的%s钱包地址</string>
    <string name="hint_private_key_field">私钥 *</string>
    <string name="hint_keystore">Keystore *</string>
    <string name="tab_keystore">Keystore</string>
    <string name="tab_private_key">私钥</string>
    <string name="title_dialog_error">错误</string>
    <string name="title_dialog_handling">Handling…</string>
    <string name="title_dialog_watch_out">Watch out!</string>
    <string name="title_dialog_add_account">添加钱包</string>
    <string name="title_dialog_deposit">你希望怎么样购买?</string>
    <string name="dialog_message">输入密码加密钱包</string>
    <string name="dialog_message_unrecoverable_message">If this device is replaced or this app is deleted, neither you nor Trust Wallet can recover your funds without a backup.</string>
    <string name="toast_message_wallet_imported">The wallet was imported</string>
    <string name="toast_message_wallet_exported">A backup was created</string>
    <string name="toast_qr_code_no_address">QR code doesn\'t contain valid address</string>
    <string name="intro_title_first_page"><![CDATA[安全保密]]></string>
    <string name="intro_title_second_page">完全透明</string>
    <string name="intro_title_third_page">可靠</string>
    <string name="intro_message_first_page">私钥不会离开设备</string>
    <string name="intro_message_second_page">代码开源 (GPL-3.0 license) and fully audited.</string>
    <string name="intro_message_third_page">快捷安全的ETH与EAI钱包</string>
    <string name="navigation_settings">设置</string>
    <string name="label_from">发送地址</string>
    <string name="label_to">接收地址</string>
    <string name="label_gas_limit">Gas限制</string>
    <string name="label_gas_price">Gas价格</string>
    <string name="label_network_fee">交易费用</string>
    <string name="button_ok">确定</string>
    <string name="hint_recipient_address">接收地址</string>
    <string name="hint_amount">发送数量</string>
    <string name="hint_contract_address">合约地址</string>
    <string name="hint_contract_symbol">标识</string>
    <string name="hint_contract_decimals">小数位</string>
    <string name="subtitle_from">发送地址</string>
    <string name="subtitle_to">接收地址</string>
    <string name="subtitle_gas_fee">Gas价格</string>
    <string name="subtitle_transaction_num">交易Hash #</string>
    <string name="subtitle_transaction_time">交易时间</string>
    <string name="subtitle_block_num">区块号 #</string>
    <string name="action_share">Share</string>
    <string name="action_more_details">更多信息</string>
    <string name="action_add_wallet">添加钱包</string>
    <string name="action_coinbase">Coinbase</string>
    <string name="action_shapeshift">Shapeshift (Crypto only)</string>
    <string name="action_changelly">Changelly</string>
    <string name="action_wallets">钱包</string>
    <string name="action_next">下一步</string>
    <string name="action_edit">编辑</string>
    <string name="action_save">保存</string>
    <string name="subject_transaction_detail">交易详细信息</string>
    <string name="error_fail_load_transaction">获取交易信息失败</string>
    <string name="error_fail_generate_qr">Could not generate qr code.</string>
    <string name="error_invalid_address">不合法地址</string>
    <string name="error_invalid_amount">不合法数量</string>
    <string name="error_transaction_failed">交易错误</string>
    <string name="error_must_numeric">必须为一个数字</string>
    <string name="transaction_succeeded">交易发送成功</string>
    <string name="NA">N/A</string>
    <string name="minus">-</string>
    <string name="error_wallet_not_selected">没有选择钱包</string>
    <string name="no_transactions_yet">暂无交易信息!</string>
    <string name="unknown_balance_with_symbol">-- ETH</string>
    <string name="unknown_balance_without_symbol">--</string>
    <string name="dummy">dummy_value</string>
    <string name="dummy_transaction_value">-- ETH</string>
    <string name="title_dialog_sending">发送中</string>
    <string name="welcome.erc20.label.title">支持ERC20</string>
    <string name="welcome.erc20.label.description">默认支持ERC20 tokens</string>
    <string name="i_understand">我同意</string>
    <string name="scan_qr">扫描二维码获得地址</string>
    <string name="info_gas_price">Gas价格越高，交易费用会越高，但交易会更快的被网络接受。</string>
    <string name="info_gas_limit">Gas限制防止智能合约消耗掉所有的货币，我们将尝试为您自动计算Gas限制，但某些智能合约可能需要自定义Gas限制。</string>
    <string name="title_send_settings">高级</string>
    <string name="title_activity_barcode">扫描二维码</string>
    <string name="error_add_token">无法添加Tokens</string>
</resources>