<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

        <Preference
            android:key="pref_wallet"
            android:icon="@mipmap/settings_backup"
            android:title="@string/action_wallets"
            />

        <ListPreference
            android:key="pref_rpcServer"
            android:title="@string/network_label"
            android:icon="@mipmap/settings_server"
            android:dialogTitle="@string/network_label" />

        <PreferenceCategory
            android:title="@string/title_community"
            android:key="pref_community_links" >

            <Preference
                android:title="@string/telegram"
                android:icon="@mipmap/settings_telegram">
                <intent android:action="android.intent.action.VIEW"
                    android:data="https://t.me/joinchat/HghDahLthxFvgINFSCJIxw" />
            </Preference>

        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/title_support"
            android:key="pref_support"
            >

            <Preference
                android:key="pref_rate"
                android:icon="@mipmap/settings_rating"
                android:title="@string/title_rate" />

            <Preference
                android:key="pref_email"
                android:icon="@mipmap/settings_email"
                android:title="@string/title_email" />

            <Preference
                android:title="@string/title_version"
                android:key="pref_version"
                android:iconSpaceReserved="true">
            </Preference>

        </PreferenceCategory>

</PreferenceScreen>
